Fixed assessment stats appearance on narrow screens.

--- a/app/assets/stylesheets/pages/assessments.sass
+++ b/app/assets/stylesheets/pages/assessments.sass
@@ -7,6 +7,8 @@
     margin-bottom: 1px
     border-bottom: 1px solid #dcdbd4
 
+    .stat-padding
+      padding-right: 0
     .assessment-stat
       *
         font-size: 1.0em
